--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 	<link rel="preload" href="./asset/img/mine-red-x.png">
 	<link rel="stylesheet" href="./assets/css/style.css">
 	<script src="./assets/scripts/script.js"></script>
-
+	<script src="https://code.jquery.com/jquery-3.6.3.slim.min.js"></script>
+	<script src="./assets/scripts/jquery.js"></script>
 </head>
 <body oncontextmenu="return false;">
 	<h1>Démineur</h1>
@@ -43,20 +44,27 @@
 	</table>
 	<br>
 	<div id="div-reset">
-		<button id="reset" onclick="reset()">Recommencer</button>
+		<button id="reset" onclick="reset(false,'')">Recommencer</button>
 	</div>
-	
-	<br>
-	<label for="height">Entrez la hauteur du champ de mines: </label>
-	<input type="number" id="height" name="height" required value="10" min="2">
-	<br>
-	<label for="width">Entrez la largeur du champ de mines: </label>
-	<input type="number" id="width" name="width" required value="10" min="2">
-	<br>
-	<label for="mines">Entrez le nombre de mines du champ de mines: </label>
-	<input type="number" id="mines" name="mines" required value="30" min="1">
-	<br>
+	<button id="beginner" class="toggler" onclick="specificGrid(8,8,10, beginner)">Débutant</button>
+	<button id="intermediate" class="toggler" onclick="specificGrid(16,16,40, intermediate)">Intermédiaire</button>
+	<button id="expert" class="toggler" onclick="specificGrid(16,30,99, expert)">Expert</button>
+	<button id="custom">Personnaliser</button>
+	<div id="customSettings">
+		<br>
+		<label for="height">Entrez la hauteur du champ de mines: </label>
+		<input type="number" id="height" name="height" required value="16" min="4">
+		<br>
+		<label for="width">Entrez la largeur du champ de mines: </label>
+		<input type="number" id="width" name="width" required value="16" min="4">
+		<br>
+		<label for="mines">Entrez le nombre de mines du champ de mines: </label>
+		<input type="number" id="mines" name="mines" required value="40" min="1">
+		<br>
+	</div>
 	<h2 id="classement-title">Classement</h2>
 	<ol id="classement">
 	</ol>
 </body>
+
+
