--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<script src="https://code.jquery.com/jquery-3.6.3.slim.min.js"></script>
 	<script src="./assets/scripts/jquery.js"></script>
 </head>
-<body oncontextmenu="return false;">
+<body>
 	<h1>Démineur</h1>
 	<div class="container">
 		<div id="counter">
@@ -40,7 +40,7 @@
 			<span class="txt">Sec</span>
 		</div>
 	</div>
-	<table id="minefield">
+	<table oncontextmenu="return false;" id="minefield">
 	</table>
 	<br>
 	<div id="div-reset">
