--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel="preload" href="./asset/img/mine-red.png">
 	<link rel="preload" href="./asset/img/mine-red-x.png">
 	<link rel="stylesheet" href="./assets/css/style.css">
-	<script src="./assets/scripts/script.js"></script>
+	<script src="./assets/scripts/script_optimized.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.3.slim.min.js"></script>
 	<script src="./assets/scripts/jquery.js"></script>
 </head>
