--- a/index.html
+++ b/index.html
@@ -3,25 +3,11 @@
 <head>
 	<meta charset="UTF-8" />
 	<Title>Démineur</Title>
-	<link rel="preload" href="./assets/img/0.png">
-	<link rel="preload" href="./assets/img/1.png">
-	<link rel="preload" href="./assets/img/2.png">
-	<link rel="preload" href="./assets/img/3.png">
-	<link rel="preload" href="./assets/img/4.png">
-	<link rel="preload" href="./assets/img/5.png">
-	<link rel="preload" href="./assets/img/6.png">
-	<link rel="preload" href="./assets/img/7.png">
-	<link rel="preload" href="./assets/img/8.png">
-	<link rel="preload" href="./assets/img/9.png">
-	<link rel="preload" href="./asset/img/blank.png">
-	<link rel="preload" href="./asset/img/flag.png">
-	<link rel="preload" href="./asset/img/mine.png">
-	<link rel="preload" href="./asset/img/mine-red.png">
-	<link rel="preload" href="./asset/img/mine-red-x.png">
 	<link rel="stylesheet" href="./assets/css/style.css">
 	<script src="./assets/scripts/script_optimized.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.3.slim.min.js"></script>
 	<script src="./assets/scripts/jquery.js"></script>
+	<link rel="icon" type="image/x-icon" href="./assets/img/logo.png">
 </head>
 <body>
 	<h1>Démineur</h1>
